Fix T61047: Undo editmesh separate crashes

Favour G_MAIN in functions that might free it.